# spider

./: README.md
hexapod_control_gazebo/include/: control_gazebo.h
hexapod_controller/: CMakeLists.txt
hexapod_controller/include/: control.h  control_gazebo.h  ik.h  map_joint.h
hexapod_controller/src/: control.cpp  gait.cpp  hexapod_controller.cpp  ik.cpp
hexapod_msgs/: CMakeLists.txt
hexapod_msgs/msg/: MoveFeet.msg
hexapod_msgs/srv/: MoveFeetLearning.srv  Reward.srv
hexapod_sound/src/: hexapod_sound.cpp
hexapod_teleop_joystick/src/: hexapod_teleop_joystick.cpp
move_feet/config/: param_move_feet.yaml
move_feet/include/: move_feet.h
move_feet/src/: main_node.cpp  move_feet.cpp
reinforcement_learning/: CMakeLists.txt  package.xml
reinforcement_learning/config/: reinforcement_learning_param.yaml
reinforcement_learning/include/: matrix.h  reinforcement_learning.h
reinforcement_learning/statistics/: attempt_1.txt  legs.txt  reward.txt
reward_learning/: CMakeLists.txt  package.xml
reward_learning/config/: reward.yaml
reward_learning/include/: reward.h
reward_learning/launch/: reward_learning.launch
reward_learning/src/: reward_node.cpp
spider_description/: package.xml
spider_description/launch/: display.launch  gazebo.launch
spider_description/params/: spider.yaml
spider_description/urdf/: Hexapod_urdf_v1.csv  spider.urdf  spider.xacro  spider1.urdf
spider_gazebo/launch/: srider_gazebo.launch  srider_gazebo1.launch  (+2 more)
test_learning/: CMakeLists.txt
tf/: CMakeLists.txt  package.xml
tf/include/: tf.h
tf/src/: main.cpp
(+1 files in other folders)
