<?xml version="1.0"?>
<package format="2">
  <name>tf</name>
  <version>0.0.0</version>
  <description>The tf package</description>


  <maintainer email="dybacap13@todo.todo">dybacap13</maintainer>

  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>



    <build_depend>roscpp</build_depend>

    <build_depend>geometry_msgs</build_depend>


    <build_depend>tf2_ros</build_depend>
    <build_depend>roslib</build_depend>


    <build_export_depend>geometry_msgs</build_export_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
